# multisensor_calibration-release

./: .gitmodules  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
multisensor_calibration/: .clangd  CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml  package.xml.in
multisensor_calibration/cfg/: TargetWithCirclesAndAruco.yaml  calibration_target_3holes_cad_mesh.ply
multisensor_calibration/include/multisensor_calibration/calibration/: CalibrationBase.h  Extrinsic2d3dCalibrationBase.h  Extrinsic3d3dCalibrationBase.h  ExtrinsicCalibrationBase.h  ExtrinsicCameraLidarCalibration.h  ExtrinsicCameraReferenceCalibration.h  ExtrinsicLidarLidarCalibration.h  ExtrinsicLidarReferenceCalibration.h  ExtrinsicLidarVehicleCalibration.h
multisensor_calibration/include/multisensor_calibration/calibration_target/: CircularCutout.h  Cutout.h
multisensor_calibration/include/multisensor_calibration/common/: common.h  utils.hpp
multisensor_calibration/include/multisensor_calibration/config/: CameraLidarRegistrationParameters.hpp  CameraReferenceRegistrationParameters.hpp  DynamicParameter.hpp  LidarLidarRegistrationParameters.hpp  LidarReferenceRegistrationParameters.hpp  LidarTargetDetectionParameters.hpp  LidarVehicleRegistrationParameters.hpp
multisensor_calibration/include/multisensor_calibration/guidance/: GuidanceBase.h
multisensor_calibration/include/multisensor_calibration/io/: Workspace.h
multisensor_calibration/include/multisensor_calibration/sensor_data_processing/: CalibrationTargetSacModel.h  CameraTargetDetection.h  DataProcessor2d.h  DataProcessor3d.h  LidarDataProcessor.h  LidarTargetDetection.h  LocalPlaneSacModel.h  ReferenceDataProcessor3d.h  SensorDataProcessorBase.h
multisensor_calibration/include/multisensor_calibration/ui/: AboutDialog.h  CalibrationConfigDialog.h  CalibrationControlWindow.h  CalibrationGuiBase.h  CameraReferenceCalibrationGui.h  ExtrinsicCameraCameraConfigWidget.h  ExtrinsicCameraLidarConfigWidget.h  ExtrinsicCameraReferenceConfigWidget.h  ExtrinsicLidarLidarConfigWidget.h  ExtrinsicLidarReferenceConfigWidget.h  GuiBase.h  ImageViewDialog.h  InstallWorkspaceDialog.h  LidarLidarCalibrationGui.h  LidarReferenceCalibrationGui.h  ObservationsViewDialog.h  Rviz3dViewDialog.h
multisensor_calibration/include/multisensor_calibration/visualizers/: PointCloud2ImageNode.h  PointCloud2PointCloudDistance.h
multisensor_calibration/launch/example/: example_ousterLeft_reference_calibration.launch.py  example_ousterRight_ousterLeft_calibration.launch.py  example_stereoLeft_ousterLeft_calibration.launch.py
multisensor_calibration/resources/: about.qrc  icons.qrc  robot_workspaces.qrc
multisensor_calibration/resources/icons/: Icons8_License-Agreement.txt
multisensor_calibration/resources/settings_templates/: extrinsic_camera_camera_calib_ws_settings_template.ini  extrinsic_camera_lidar_calib_ws_settings_template.ini  extrinsic_camera_reference_calib_ws_settings_template.ini  extrinsic_lidar_lidar_calib_ws_settings_template.ini  extrinsic_lidar_reference_calib_ws_settings_template.ini  intrinsic_camera_calib_ws_settings_template.ini
multisensor_calibration/rviz/: extrinsic_lidar_lidar_calibration_template.rviz
multisensor_calibration/rviz/e2/: ReferenceLidarVehicleCalibration_e2.rviz
multisensor_calibration/rviz/u1/: u1_ousterLeft_ousterRight_calibration_ref.rviz  u1_ousterLeft_ousterRight_calibration_src.rviz
multisensor_calibration/rviz/vb/: vb_ousterLeft_reference_calibration_src.rviz  vb_ousterRear_ousterLeft_calibration_ref.rviz  vb_ousterRear_ousterLeft_calibration_src.rviz  vb_ousterRight_ousterLeft_calibration_ref.rviz  vb_ousterRight_ousterLeft_calibration_src.rviz  vb_ouster_stick_reference_calibration_src.rviz
multisensor_calibration/src/calibration/: CalibrationBase.cpp  Extrinsic2d3dCalibrationBase.cpp  Extrinsic3d3dCalibrationBase.cpp  ExtrinsicCalibrationBase.cpp  ExtrinsicCameraLidarCalibration.cpp  ExtrinsicCameraReferenceCalibration.cpp  ExtrinsicLidarLidarCalibration.cpp  ExtrinsicLidarReferenceCalibration.cpp  ExtrinsicLidarVehicleCalibration.cpp
multisensor_calibration/src/calibration_target/: CircularCutout.cpp  Cutout.cpp
multisensor_calibration/src/guidance/: GuidanceBase.cpp  GuidedCameraLidarTargetPlacementNode.cpp  GuidedLidarLidarTargetPlacementNode.cpp
multisensor_calibration/src/io/: Workspace.cpp
multisensor_calibration/src/nodes/: AggregatePointCloudNode.cpp  InitializeRobotWsNode.cpp  PublishPointCloudNode.cpp
multisensor_calibration/src/sensor_data_processing/: CalibrationTargetSacModel.cpp  CameraDataProcessor.cpp  CameraTargetDetection.cpp  DataProcessor2d.cpp  DataProcessor3d.cpp  LidarDataProcessor.cpp  LidarTargetDetection.cpp  LocalPlaneSacModel.cpp  ReferenceDataProcessor3d.cpp  SensorDataProcessorBase.cpp
multisensor_calibration/src/ui/: AboutDialog.cpp  CalibrationConfigDialog.cpp  CalibrationConfigDialog.ui  CalibrationControlWindow.cpp  CalibrationGuiBase.cpp  CameraReferenceCalibrationGui.cpp  ExtrinsicCameraLidarConfigWidget.cpp  ExtrinsicCameraLidarConfigWidget.ui  ExtrinsicCameraReferenceConfigWidget.cpp  ExtrinsicCameraReferenceConfigWidget.ui  ExtrinsicLidarLidarConfigWidget.cpp  ExtrinsicLidarLidarConfigWidget.ui  ExtrinsicLidarReferenceConfigWidget.cpp  ExtrinsicLidarReferenceConfigWidget.ui  ImageViewDialog.cpp  InstallWorkspaceDialog.cpp  InstallWorkspaceDialog.ui  LidarLidarCalibrationGui.cpp  LidarReferenceCalibrationGui.cpp  MultiSensorCalibrationGui.cpp  ObservationsViewDialog.cpp  ObservationsViewDialog.ui  Rviz3dViewDialog.cpp
multisensor_calibration/src/visualizers/: PointCloud2ImageNode.cpp
multisensor_calibration_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml.in
multisensor_calibration_interface/msg/: CalibrationResult.msg  MarkerObservations.msg
multisensor_calibration_interface/srv/: AddRegionMarker.srv  CalibrationMetaData.srv  CameraIntrinsics.srv  FinalizeCalibration.srv
small_gicp_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+148 files in other folders)
