<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multisensor_calibration_interface</name>
  <version>2.0.1</version>
  <description>
    Messages and service definitions for the multisensor_calibration package.
  </description>
  <maintainer email="miguel.granero@iosb.fraunhofer.de">Miguel Granero</maintainer>
  <license>BSD</license>
  <author>Boitumelo Ruf</author>
  <author>Miguel Granero</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
